Added lusca for security, added grunt-nsp-package for module vulnerability scanning during `package` task
Updating README

Updating README

--- a/config.json
+++ b/config.json
@@ -46,6 +46,15 @@
 		"dtrace": false,
 		"syslog": false
 	},
+	"security": {
+		"key": "_csrf",
+		"csrf": false,
+		"csp": null,
+		"xframe": "",
+		"p3p": "",
+		"hsts": null,
+		"xssProtection": null
+	},
 	"maxBytes": 1048576,
 	"port": 8000,
 	"routes": null,
