--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "keigai": "0.6.1",
-    "turtle.io": "3.0.10",
+    "turtle.io": "3.0.12",
     "cookie-parser": "1.3.2",
     "express-session": "^1.7.2",
     "passport": "0.2.0",
@@ -39,7 +39,8 @@
     "passport-http-bearer": "1.0.1",
     "passport-linkedin": "0.1.3",
     "passport-twitter": "1.0.2",
-    "connect-redis": "2.0.0"
+    "connect-redis": "2.0.0",
+    "lusca": "1.0.1"
   },
   "devDependencies": {
     "grunt-cli": "~0.1.13",
@@ -53,7 +54,8 @@
     "ink-docstrap": "~0.4.12",
     "hippie": "~0.3.0",
     "chai": "^1.9.1",
-    "grunt-mocha-test": "^0.11.0"
+    "grunt-mocha-test": "^0.11.0",
+    "grunt-nsp-package": "0.0.5"
   },
   "keywords": [
     "REST",
