--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tensō is a REST API facade for node.js, designed to simplify the implementation of APIs.",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "homepage": "http://avoidwork.github.io/tenso",
   "author": {
     "name": "Jason Mulligan",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "keigai": "~1.0.0",
-    "turtle.io": "~3.1.16",
+    "turtle.io": "~3.1.19",
     "cookie-parser": "~1.3.3",
     "express-session": "~1.8.2",
     "passport": "~0.2.0",
@@ -56,7 +56,6 @@
     "grunt-jsdoc": "~0.5.6",
     "ink-docstrap": "~0.4.12",
     "hippie": "~0.3.0",
-    "chai": "^1.9.1",
     "grunt-mocha-test": "^0.11.0",
     "grunt-nsp-package": "^0.0.5"
   },
@@ -64,6 +63,7 @@
     "REST",
     "API",
     "facade",
-    "server"
+    "server",
+    "hypermedia"
   ]
 }
